@@ -4,9 +4,7 @@
 20121308 Hacer un informe de que documentos no ha leído
 20130116 Contador de conexiones http
 20130118 Si en correo se mete mmmarí@gmail.com con acento falla, validar el campo a caracteres permitidos
-20130118 Hay mucha cpu consumida en secretaria, poner en config, only nums 10000, updatedata 20000, send 20000
 20130118 Los cerrados no deben estar en memoria, solo los activos
-20130118 Hacer widget monthSelector para controlar los meses dentro de los cerrados
 20130421 Hacer icono en barra de tareas y minimizar.
 20130218 Cuando es 09_57:00 no muestra bien en documentos ni en fecha alta usuarios
 20130708 Los enlaces no se abren con tipos mime siempre ventanas de firefox. 
